--- a/index.html
+++ b/index.html
@@ -24,6 +24,62 @@
     <title>Devchallenges</title>
   </head>
   <body>
+    <main>
+      <section class="main-title">
+        <h1>The Creative crew</h1>
+      </section>
+      <section class="main-desc">
+        <h2>Who we are</h2>
+        <p>
+          We are a team of creatively diverse. driven. innovative individuals
+          working in vairous locations from the world
+        </p>
+      </section>
+      <div class="main-members">
+        <div class="main-members-card">
+          <article>
+            <img src="photo1.png" alt="" />
+            <h2>Bill Mahoney</h2>
+          </article>
+          <span class="card-job">Product Owner</span>
+        </div>
+        <div class="main-members-card">
+          <article>
+            <img src="photo2.png" alt="" />
+            <h2>Saba Cabrera</h2>
+          </article>
+          <span class="card-job">Art Director</span>
+        </div>
+        <div class="main-members-card">
+          <article>
+            <img src="photo3.png" alt="" />
+            <h2>Shae Lee</h2>
+          </article>
+          <span class="card-job">Tech Lead</span>
+        </div>
+        <div class="main-members-card">
+          <article>
+            <img src="photo4.png" alt="" />
+            <h2>Skylah Lu</h2>
+          </article>
+          <span class="card-job">UX Designer</span>
+        </div>
+        <div class="main-members-card">
+          <article>
+            <img src="photo5.png" alt="" />
+            <h2>Griff Richards</h2>
+          </article>
+          <span class="card-job">Developer</span>
+        </div>
+        <div class="main-members-card">
+          <article>
+            <img src="photo6.png" alt="" />
+            <h2>Stan John</h2>
+          </article>
+          <span class="card-job">Developer</span>
+        </div>
+      </div>
+    </main>
     <script src="contact.js" type="module"></script>
   </body>
 </html>
