--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Devchallenges</title>
   </head>
   <body>
@@ -38,42 +39,42 @@
       <div class="main-members">
         <div class="main-members-card">
           <article>
-            <img src="photo1.png" alt="" />
+            <img src="images/photo1.png" alt="" />
             <h2>Bill Mahoney</h2>
           </article>
           <span class="card-job">Product Owner</span>
         </div>
         <div class="main-members-card">
           <article>
-            <img src="photo2.png" alt="" />
+            <img src="images/photo2.png" alt="" />
             <h2>Saba Cabrera</h2>
           </article>
           <span class="card-job">Art Director</span>
         </div>
         <div class="main-members-card">
           <article>
-            <img src="photo3.png" alt="" />
+            <img src="images/photo3.png" alt="" />
             <h2>Shae Lee</h2>
           </article>
           <span class="card-job">Tech Lead</span>
         </div>
         <div class="main-members-card">
           <article>
-            <img src="photo4.png" alt="" />
+            <img src="images/photo4.png" alt="" />
             <h2>Skylah Lu</h2>
           </article>
           <span class="card-job">UX Designer</span>
         </div>
         <div class="main-members-card">
           <article>
-            <img src="photo5.png" alt="" />
+            <img src="images/photo5.png" alt="" />
             <h2>Griff Richards</h2>
           </article>
           <span class="card-job">Developer</span>
         </div>
         <div class="main-members-card">
           <article>
-            <img src="photo6.png" alt="" />
+            <img src="images/photo6.png" alt="" />
             <h2>Stan John</h2>
           </article>
           <span class="card-job">Developer</span>
