set the font weight and bold of the document

--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
       </section>
       <div class="main-members">
         <div class="main-members-card">
-          <article>
+          <article class="card-info">
             <img src="images/photo1.png" alt="" />
             <h2>Bill Mahoney</h2>
           </article>
           <span class="card-job">Product Owner</span>
         </div>
         <div class="main-members-card">
-          <article>
+          <article class="card-info">
             <img src="images/photo2.png" alt="" />
             <h2>Saba Cabrera</h2>
           </article>
           <span class="card-job">Art Director</span>
         </div>
         <div class="main-members-card">
-          <article>
+          <article class="card-info">
             <img src="images/photo3.png" alt="" />
             <h2>Shae Lee</h2>
           </article>
           <span class="card-job">Tech Lead</span>
         </div>
         <div class="main-members-card">
-          <article>
+          <article class="card-info">
             <img src="images/photo4.png" alt="" />
             <h2>Skylah Lu</h2>
           </article>
           <span class="card-job">UX Designer</span>
         </div>
         <div class="main-members-card">
-          <article>
+          <article class="card-info">
             <img src="images/photo5.png" alt="" />
             <h2>Griff Richards</h2>
           </article>
           <span class="card-job">Developer</span>
         </div>
         <div class="main-members-card">
-          <article>
+          <article class="card-info">
             <img src="images/photo6.png" alt="" />
             <h2>Stan John</h2>
           </article>
