finished final design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="main720.css" />
+    <link rel="stylesheet" href="css/main720.css" />
     <title>Devchallenges</title>
   </head>
   <body>
